fix wont compile on java 17